--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,3 +13,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+server:
+  port: 3004
+springdoc:
+  swagger-ui:
+    enabled: true
