--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,37 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  spring_app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: spring_app
+    ports:
+      - "3004:3004"
+    volumes:
+      # Прив'язуємо локальний код до контейнера
+      - ./src/main/java:/app/src/main/java
+      - ./src/main/resources:/app/src/main/resources
+      # Якщо вам потрібні зміни в pom.xml чи інших конфігураціях
+      - ./pom.xml:/app/pom.xml
+    depends_on:
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://host.docker.internal:5432/postgres
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: 12345678
+      SPRING_DATASOURCE_DRIVER-CLASS-NAME: org.postgresql.Driver
+      SPRING_JPA_HIBERNATE_DDL-AUTO: update
+      SPRING_JPA_DATABASE: postgresql
+      SPRING_JPA_DATABASE-PLATFORM: org.hibernate.dialect.PostgreSQLDialect
+      SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL: true
+      SPRING_SERVER_PORT: 3004
+    networks:
+      - app-network
+
 volumes:
   postgres_data:
+
+networks:
+  app-network:
+    driver: bridge
