feat(CourseDTO): create course dto refactor(CourseController): refactor course controller refactor(UserController): refactor user controller feat(Lesson): create Lesson config feat(UserService): create user service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   postgres:
@@ -44,6 +44,7 @@ services:
 
 volumes:
   postgres_data:
+    external: true
 
 networks:
   app-network:
