--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,7 +16,7 @@ spring:
       hibernate:
         format_sql: true
 server:
-  port: 3004
+  port: ${PORT:3004}
 springdoc:
   swagger-ui:
     enabled: true
