--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,11 @@ spring:
   datasource:
 #    url: jdbc:postgresql://host.docker.internal:5432/postgres
 #    url: jdbc:postgresql://localhost:5432/postgres
-    url: jdbc:postgresql://turntable.proxy.rlwy.net:15640/postgres
+
+#    DATABASE_PUBLIC_URL
+#    url: jdbc:postgresql://turntable.proxy.rlwy.net:15640/postgres
+#    DATABASE_URL
+    url: jdbc:postgresql://@postgres.railway.internal:5432/railway
     username: postgres
     password: dkKarLfDxDEQyoxFQrXXhbfnHmAfsUDm
     driver-class-name: org.postgresql.Driver
