--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,9 +6,10 @@ spring:
 #    DATABASE_PUBLIC_URL
 #    url: jdbc:postgresql://turntable.proxy.rlwy.net:15640/postgres
 #    DATABASE_URL
-    url: jdbc:postgresql://postgres.railway.internal:5432/railway
-    username: postgres
-    password: dkKarLfDxDEQyoxFQrXXhbfnHmAfsUDm
+#    url: jdbc:postgresql://postgres.railway.internal:5432/postgres
+    url: jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
+    username: ${PROD_DB_USERNAME}
+    password: ${PROD_DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
