--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,7 @@ spring:
     username: ${PROD_DB_USERNAME}
     password: ${PROD_DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -21,6 +22,7 @@ spring:
       hibernate:
         format_sql: true
 
+
 springdoc:
   swagger-ui:
     enabled: true
@@ -30,3 +32,6 @@ testing:
   app:
     secret: ljb3w443eifubw23
     expirationMs: 60000
+
+server:
+  port: ${PORT}
